# eve

./: Makefile
.github/workflows/: assets.yml  build-alpine-base.yml  build.yml  check-docker-hashes-consistency.yml  codeql.yml  commit-messages.yml  eden-trusted.yml  eden.yml  go-tests.yml  osv-scanner.yml  pr-approval-gate.yml  publish.yml  rerun-ci.yml  spdx.yml  yetus.yml
build-tools/cross-compilers/: Dockerfile
docs/: DEBUGGING.md
images/: rootfs.yml.in
pkg/alpine/: Dockerfile  build-cache.sh  eve-cross-sysroot.sh
pkg/alpine-base/: Dockerfile
pkg/apparmor/: Dockerfile
pkg/bpftrace/: Dockerfile
pkg/bsp-imx/: Dockerfile
pkg/cross-compilers/: Dockerfile  build.yml
pkg/debug/: Dockerfile
pkg/dnsmasq/: Dockerfile
pkg/dom0-ztools/: Dockerfile
pkg/edgeview/: Dockerfile
pkg/eve/: Dockerfile.in
pkg/fscrypt/: Dockerfile
pkg/fw/: Dockerfile
pkg/gpt-tools/: Dockerfile
pkg/grub/: Dockerfile
pkg/guacd/: Dockerfile
pkg/installer/: Dockerfile
pkg/ipxe/: Dockerfile
pkg/kdump/: Dockerfile
pkg/kexec/: Dockerfile
pkg/kube/: Dockerfile
pkg/measure-config/: Dockerfile
pkg/memory-monitor/: Dockerfile
pkg/mkconf/: Dockerfile
pkg/mkimage-iso-efi/: Dockerfile
pkg/mkimage-raw-efi/: Dockerfile  Dockerfile.in  install  make-raw
pkg/mkrootfs-ext4/: Dockerfile
pkg/mkrootfs-squash/: Dockerfile
pkg/monitor/: .gitignore  Cargo.toml  Dockerfile  build.yml  run-monitor.sh  rust-toolchain.toml
pkg/monitor/src/: main.rs
pkg/newlog/: Dockerfile
pkg/nvidia/: Dockerfile
pkg/optee-os/: Dockerfile
tools/: parse-pkgs.sh
(+91 files in other folders)
